Inicia la aplicacion patrimonio georeferenciado de ipiales

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,27 @@
 <!doctype html>
-<html>
+<html lang="es">
+
 <head>
   <meta charset="utf-8">
-  <title>PatrimonioGeoreferenciadoIpiales</title>
+  <title>Patrimonio Georeferenciado Ipiales</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./src/favicon.ico">
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700i&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 </head>
+
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>Cargando...</app-root>
+  <!--Import jQuery before materialize.js-->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 </body>
+
 </html>
